Set up Summarizer app layout, form structure, and basic UI components
- Created the 'summarizer' and 'dashboard' Django apps.
- Implemented the initial HTML template with form fields for:
  - URL input
  - Prompt customization
  - Output PDF file name
- Designed and linked a professional CSS file with clean, responsive layout.
- Added JavaScript for:
  - Simulated progress bar animation
  - Basic client-side form validation
  - Error feedback and dynamic file name display (when file upload is ready)
- Created the output section for displaying the generated PDF via iframe (PDF generation already wired, preview still to come).
- Note: file upload handling and PDF summarization logic are not yet implemented.

--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,20 @@
-
 # Python
 __pycache__/
 *.py[cod]
+*.sqlite3
 *.log
-
-# Virtual environments
-.venv/
-venv/
 
 # Env & config
 .env
 .env.*
-.python-version
 
-# Django/Database
+# Django
 db.sqlite3
-local_settings.py
 /media/
 staticfiles/
+local_settings.py
 
-# IDEs
+# VSCode / PyCharm
 .vscode/
 .idea/
 
@@ -27,15 +22,9 @@ staticfiles/
 .DS_Store
 Thumbs.db
 
-# Migrations (keep __init__.py only)
+# Migrations (opcional — cuidado!)
 **/migrations/*.py
 !**/migrations/__init__.py
 
-# Node (if using frontend)
+# Node (caso use algum frontend)
 node_modules/
-
-# Ruff/Pyright/other tool caches
-.ruff_cache/
-
-# Lock files (keep only if needed for reproducibility)
-uv.lock
