--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,12 +8,19 @@ dependencies = [
     "django>=5.2.3",
     "django-allauth>=65.9.0",
     "django-environ>=0.12.0",
+    "docling>=2.41.0",
     "jwt>=1.4.0",
+    "langchain>=0.3.26",
+    "langchain-community>=0.3.27",
+    "langchain-mistralai>=0.2.11",
+    "langchain-openai>=0.3.27",
+    "markdown2>=2.5.3",
     "psycopg2>=2.9.10",
     "psycopg[binary]>=3.2.9",
     "python-dotenv>=1.1.1",
     "requests>=2.32.4",
     "torch>=2.7.1",
+    "weasyprint>=65.1",
 ]
 
 
